--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<img src="me.jpg" alt="My photo" width="300" height="300">
 	<h1>Mirzokhidjon Ikromov</h1>
-	
+
 	<ul>
 		<li><a href="lab01.html">Lab1 - My Homepage Lab</a></li>
 		<li><a href="">Lab2 - About Me Lab</a></li>
@@ -20,6 +20,8 @@
 		<li><a href="">Lab9 - Number Quiz Lab</a></li>
 		<li><a href="">Lab10 - Dictionary Project</a></li>
 	</ul>
+
+	 <a href="http://validator.w3.org/check/referer"><img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>
 
 </body>
 </html>
