--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<h1>Mirzokhidjon Ikromov</h1>
 
 	<ul>
-		<li><a href="lab01.html">Lab1 - My Homepage Lab</a></li>
+		<li><a href="index.html">Lab1 - My Homepage Lab</a></li>
 		<li><a href="">Lab2 - About Me Lab</a></li>
 		<li><a href="">Lab3 - Grades Exercises</a></li>
 		<li><a href="">Lab4 - HTML Forms Lab</a></li>
