--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 	<h1>Mirzokhidjon Ikromov</h1>
 
 	<ul>
-		<li><a href="index.html">Lab1 - My Homepage Lab</a></li>
-		<li><a href="">Lab2 - About Me Lab</a></li>
-		<li><a href="">Lab3 - Grades Exercises</a></li>
-		<li><a href="">Lab4 - HTML Forms Lab</a></li>
-		<li><a href="">Lab5 - Decorate My Text</a></li>
-		<li><a href="">Lab6 - Modules and Closure</a></li>
-		<li><a href="">Lab7 - Mouse Maze</a></li>
-		<li><a href="">Lab8 - Simple Calculator Lab</a></li>
-		<li><a href="">Lab9 - Number Quiz Lab</a></li>
-		<li><a href="">Lab10 - Dictionary Project</a></li>
+		<li><a href="index.html">Lab0 - My Homepage Lab</a></li>
+		<li><a href="lab01/aboutme.html">Lab1 - About Me Lab</a></li>
+		<li><a href="hw1/pie.html">HW1 - Recipe</a></li>
+		<li><a href="">Lab2 - Grades Exercises</a></li>
+		<li><a href="">Lab3 - HTML Forms Lab</a></li>
+		<li><a href="">Lab4 - Decorate My Text</a></li>
+		<li><a href="">Lab5 - Modules and Closure</a></li>
+		<li><a href="">Lab6 - Mouse Maze</a></li>
+		<li><a href="">Lab7 - Simple Calculator Lab</a></li>
+		<li><a href="">Lab8 - Number Quiz Lab</a></li>
+		<li><a href="">Lab9 - Dictionary Project</a></li>
 	</ul>
 
 	<a href="http://validator.w3.org/check/referer">
