--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<li><a href="index.html">Lab0 - My Homepage Lab</a></li>
 		<li><a href="lab01/aboutme.html">Lab1 - About Me Lab</a></li>
 		<li><a href="hw1/pie.html">HW1 - Recipe</a></li>
+		<li><a href="hw2/tmnt.html">HW2 - Movie Review</a></li>
 		<li><a href="">Lab2 - Grades Exercises</a></li>
 		<li><a href="">Lab3 - HTML Forms Lab</a></li>
 		<li><a href="">Lab4 - Decorate My Text</a></li>
