--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<li><a href="hw1/pie.html">HW1 - Recipe</a></li>
 		<li><a href="hw2/tmnt.html">HW2 - Movie Review</a></li>
 		<li><a href="">Lab2 - Grades Exercises</a></li>
-		<li><a href="">Lab3 - HTML Forms Lab</a></li>
+		<li><a href="lab02/signup.html">Lab3 - HTML Forms Lab</a></li>
 		<li><a href="">Lab4 - Decorate My Text</a></li>
 		<li><a href="">Lab5 - Modules and Closure</a></li>
 		<li><a href="">Lab6 - Mouse Maze</a></li>
