--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<li><a href="hw2/tmnt.html">HW2 - Movie Review</a></li>
 		<li><a href="lab03/grade.html">Lab2 - Grades Exercises</a></li>
 		<li><a href="lab02/signup.html">Lab3 - HTML Forms Lab</a></li>
+		<li><a href="javascriptExercises/js.html">JavaScript Exercises</a></li>
 		<li><a href="">Lab4 - Decorate My Text</a></li>
 		<li><a href="">Lab5 - Modules and Closure</a></li>
 		<li><a href="">Lab6 - Mouse Maze</a></li>
