--- a/javascriptExercises/js.html
+++ b/javascriptExercises/js.html
@@ -9,6 +9,7 @@
 	<ul>
 		<li><a href="alert.html">OnClick Alert</a></li>
 		<li><a href="tipCalculator.html">Tip Calculator</a></li>
+		<li><a href="module1.html">Module and Closure Lab Ex1</a></li>
 	</ul>
 
 	<a href="http://validator.w3.org/check/referer">
