--- a/javascriptExercises/js.html
+++ b/javascriptExercises/js.html
@@ -10,6 +10,7 @@
 		<li><a href="alert.html">OnClick Alert</a></li>
 		<li><a href="tipCalculator.html">Tip Calculator</a></li>
 		<li><a href="module1.html">Module and Closure Lab Ex1</a></li>
+		<li><a href="module2.html">Module and Closure Lab Ex2</a></li>
 	</ul>
 
 	<a href="http://validator.w3.org/check/referer">
