--- a/javascriptExercises/module1.html
+++ b/javascriptExercises/module1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>OnCLick Alert</title>
+	<title>Modules and Closure Lab Ex1</title>
 	<script src="module.js" type="text/javascript"></script>
 </head>
 <body>
