--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<li><a href="lab02/signup.html">Lab3 - HTML Forms Lab</a></li>
 		<li><a href="javascriptExercises/js.html">JavaScript Exercises</a></li>
 		<li><a href="lab04/decoratemytext.html">Lab4 - Decorate My Text</a></li>
-		<li><a href="">Lab5 - Modules and Closure</a></li>
+		<li><a href="hw8/ASCIImation.html">HW8 -  ASCII Animation</a></li>
 		<li><a href="">Lab6 - Mouse Maze</a></li>
 		<li><a href="">Lab7 - Simple Calculator Lab</a></li>
 		<li><a href="">Lab8 - Number Quiz Lab</a></li>
