--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 		<li><a href="javascriptExercises/js.html">JavaScript Exercises</a></li>
 		<li><a href="lab04/decoratemytext.html">Lab4 - Decorate My Text</a></li>
 		<li><a href="hw8/ASCIImation.html">HW8 -  ASCII Animation</a></li>
-		<li><a href="">Lab6 - Mouse Maze</a></li>
-		<li><a href="">Lab7 - Simple Calculator Lab</a></li>
-		<li><a href="">Lab8 - Number Quiz Lab</a></li>
-		<li><a href="">Lab9 - Dictionary Project</a></li>
+		<li><a href="maze/maze.html">Lab7 - Mouse Maze</a></li>
+		<li><a href="">Lab8 - Simple Calculator Lab</a></li>
+		<li><a href="">Lab9 - Number Quiz Lab</a></li>
+		<li><a href="">Lab10 - Dictionary Project</a></li>
 	</ul>
 
 	<a href="http://validator.w3.org/check/referer">
