--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<li><a href="lab04/decoratemytext.html">Lab4 - Decorate My Text</a></li>
 		<li><a href="hw8/ASCIImation.html">HW8 -  ASCII Animation</a></li>
 		<li><a href="maze/maze.html">Lab7 - Mouse Maze</a></li>
+		<li><a href="hw9/fifteen.html">HW9 - 15 Puzzle</a></li>
 		<li><a href="">Lab8 - Simple Calculator Lab</a></li>
 		<li><a href="">Lab9 - Number Quiz Lab</a></li>
 		<li><a href="">Lab10 - Dictionary Project</a></li>
