--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<li><a href="hw9/fifteen.html">HW9 - 15 Puzzle</a></li>
 		<li><a href="">Lab8 - Simple Calculator Lab</a></li>
 		<li><a href="">Lab9 - Number Quiz Lab</a></li>
-		<li><a href="">Lab10 - Dictionary Project</a></li>
+		<li><a href="dict/dict.html">Dictionary Project</a></li>
 	</ul>
 
 	<a href="http://validator.w3.org/check/referer">
