--- a/dict/dict.html
+++ b/dict/dict.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Mohamed Samy's Dictionary</title>
+		<title>Dictionary</title>
 		<script src = "http_ajax.googleapis.com_ajax_libs_jquery_1.7.2_jquery.js" ></script>
 		<script src = "dict.js" ></script>
         <link href="dict.css" type="text/css" rel="stylesheet" />
