--- a/hw9/fifteen.html
+++ b/hw9/fifteen.html
@@ -1,29 +1,18 @@
-<!--B.-->
 <!DOCTYPE html>
 <html>
-	<!--
-	CSE 190 M, Homework 7: Fifteen Puzzle
-	You should not modify fifteen.html.  Your JS code should work with an
-	unmodified version of this file.
-	-->
 	<head>
 		<title>Fifteen Puzzle</title>
+
+		<link href="https://webster.cs.washington.edu/images/fifteen/fifteen.gif"
+		      type="image/gif" rel="shortcut icon" />
+
+		<!-- instructor-provided JavaScript files -->
+		<script src="https://webster.cs.washington.edu/js/fifteen/grading.js"
+		        type="text/javascript"></script>
+
 		<!-- your files that you will write -->
 		<link href="fifteen.css" type="text/css" rel="stylesheet" />
-		<!-- instructor-provided JavaScript files; do not modify -->
-		<!--<script src="http://ajax.googleapis.com/ajax/libs/prototype/1.7.0.0/prototype.js"  type="text/javascript"></script>-->
-		<!--<script src="jstep.js" 	type="text/javascript"></script>-->
-
-		<!-- <script src="grading.js" type="text/javascript"></script>
--->
-
-
-
-
-		<script src="http_ajax.googleapis.com_ajax_libs_jquery_1.7.2_jquery.js" type="text/javascript"></script>
-
 		<script src="fifteen.js" type="text/javascript"></script>
-		<!--<script>jQuery.noConflict();</script>-->
 	</head>
 
 	<body>
@@ -35,17 +24,14 @@
 			How quickly can you solve it?
 		</p>
 
-		<div id="puzzlearea">
-			<!-- the following are the actual fifteen puzzle pieces -->
-			<div>1</div>  <div>2</div>  <div>3</div>  <div>4</div>
-			<div>5</div>  <div>6</div>  <div>7</div>  <div>8</div>
-			<div>9</div>  <div>10</div> <div>11</div> <div>12</div>
-			<div>13</div> <div>14</div> <div>15</div>
-		</div>
+		<!-- this area holds the actual fifteen puzzle pieces -->
+		<div id="puzzlearea"></div>
 
 		<p id="controls">
 			<button id="shufflebutton">Shuffle</button>
 		</p>
+		
+		<div id="output"></div>
 		
 		<p>
 			American puzzle author and mathematician Sam Loyd is often falsely
@@ -57,11 +43,11 @@
 
 		<div id="w3c">
 			<a href="https://webster.cs.washington.edu/validate-html.php">
-				<img src="https://webster.cs.washington.edu/w3c-html.png" alt="Valid HTML" /></a>
+				<img src="https://webster.cs.washington.edu/images/w3c-html.png" alt="Valid HTML" /></a>
 			<a href="https://webster.cs.washington.edu/validate-css.php">
-				<img src="https://webster.cs.washington.edu/w3c-css.png" alt="Valid CSS" /></a>
+				<img src="https://webster.cs.washington.edu/images/w3c-css.png" alt="Valid CSS" /></a>
 			<a href="https://webster.cs.washington.edu/jslint/?referer">
-				<img src="https://webster.cs.washington.edu/w3c-js.png" alt="Valid JS" /></a>
+				<img src="https://webster.cs.washington.edu/images/w3c-js.png" alt="Valid JS" /></a>
 		</div>
 	</body>
 </html>
