--- a/hw9/fifteen.html
+++ b/hw9/fifteen.html
@@ -1,10 +1,5 @@
 <!DOCTYPE html>
 <html>
-	<!--
-	<!-- MFN0634 TWeb Lab05 (Fifteen Puzzle)
-	You should not modify fifteen.html.  Your JS code should work with an
-	unmodified version of this file.
-	-->
 	<head>
 		<title>Fifteen Puzzle</title>
 
@@ -19,7 +14,7 @@
 	</head>
 
 	<body>
-		<h1>MFN0634 TWeb Fifteen Puzzle</h1>
+		<h1>CSE 190 M Fifteen Puzzle</h1>
 
 		<p>
 			The goal of the fifteen puzzle is to un-jumble its fifteen squares
