--- a/dict/dict.html
+++ b/dict/dict.html
@@ -7,9 +7,9 @@
 			
 	</head>
 	<body>
-		<Form action="dict.php" method = "Post">
+		<Form action="/search" method = "Post">
 <Table>
-				<tr><td>Word:</td> <td><input type="text" name="txtWord" size="16" id = "word"/> </td>
+				<tr><td>Word:</td> <td><input type="text" name="word" size="16" id = "word"/> </td>
 	 </tr>
 </Table>
 <input id = "btnLookup" type="button" value="Lookup"/>
